# KafkaQuickstart

./: CMakeLists.txt  README.md
KafkaQuickstart/: CMakeLists.txt  consumer.c  producer.c
src/client/: CMakeLists.txt  producer.c
src/common/: common.c
src/server/: CMakeLists.txt  consumer.c
